--- a/setup-dotfiles.yml
+++ b/setup-dotfiles.yml
@@ -1,15 +1,19 @@
-- hosts: all
+- hosts: localhost 
   vars:
     home_dir: /Users/ibalce 
     dotfiles_dir: /Users/ibalce/Documents/projects/dotfiles
   tasks:
-  - name: Creates directory
+  - name: Create ansible directory
     file: path=/etc/ansible state=directory
+  - name: Symlink ansible hosts
+    file: 
+      src: '{{ dotfiles_dir }}/ansible/hosts'
+      dest: '/etc/ansible/hosts' 
+      state: link
   - name: Symlink config files
     file:
-      src: '{{dotfiles_dir}}/home/{{ item.src }}'
-      dest: '{{home_dir}}/{{ item.dest }}'
+      src: '{{ item.src }}'
+      dest: '{{ home_dir }}/{{ item.path }}'
       state: link
-    with_items:
-      - { src: '.gitconfig', dest: '.gitconfig' }
-      - { src: '.bashrc', dest: '.bash_profile' }
+    with_filetree:
+      - '{{ dotfiles_dir }}/home/'
