--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -1,3 +1,11 @@
+[credential]
+        helper = cache --timeout 28800
 [user]
 	name = ellaqezi 
 	email = ellaqezi@gmail.com 
+[alias]
+        lg = log --color --graph --abbrev-commit\n           --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%C(bold blue)<%an>%Creset'
+        puh = push -u upstream HEAD
+        puf = push --force upstream HEAD
+        s = status
+        d = diff
