setup zsh with spaceship prompt

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -7,5 +7,5 @@
         lg = log --color --graph --abbrev-commit\n           --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%C(bold blue)<%an>%Creset'
         puh = push -u upstream HEAD
         puf = push --force upstream HEAD
-        s = status
+        s = status -s
         d = diff
