--- a/ansible/vars/Ubuntu.yml
+++ b/ansible/vars/Ubuntu.yml
@@ -1,10 +1,2 @@
+apt_utils: {{ utils }}
 font_dir: '{{ ansible_env.HOME }}/.local/share/fonts'
-apt_utils:
-  - bash-completion
-  - docker
-  - git
-  - maven
-  - tree
-  - watch
-  - wget
-  - zsh
