--- a/ansible/vars/MacOSX.yml
+++ b/ansible/vars/MacOSX.yml
@@ -1,7 +1,6 @@
 extra_utils:
   - zsh-autosuggestions
-  - zsh-completions
-brew_utils: "{{ utils }} + {{ extra_utils }}"
+utils: "{{ common }} + {{ extra_utils }}"
 brew_casks:
   - flux
   - intellij-idea-ce
