--- a/ansible/vars/Ubuntu.yml
+++ b/ansible/vars/Ubuntu.yml
@@ -1,2 +1,6 @@
-apt_utils: {{ utils }}
-font_dir: '{{ ansible_env.HOME }}/.local/share/fonts'
+utils: "{{ common }}"
+apt_repos:
+  - "deb http://download.opensuse.org/repositories/shells:/zsh-users:/zsh-completions/x{{ ansible_distribution }}_{{ ansible_distribution_version }} /"
+apt_keys:
+  - 'https://download.opensuse.org/repositories/shells:zsh-users:zsh-completions/x{{ ansible_distribution }}_{{ ansible_distribution_version }}/Release.key'
+font_dir: "{{ ansible_env.HOME }}/.local/share/fonts"
