--- a/ansible/tasks/setup-zsh.yml
+++ b/ansible/tasks/setup-zsh.yml
@@ -18,7 +18,7 @@
   when: zsh.results[1].stat.exists == False
 - name: Stat powerline
   stat:
-    path: '{{ font_dir }}/FuraMono-Regular Powerline.otf'
+    path: "{{ font_dir | default('/usr/share/fonts') }}/FuraMono-Regular Powerline.otf"
   register: powerline
 - name: Create temporary powerline directory
   tempfile:
@@ -37,7 +37,7 @@
   when: powerline.stat.exists == False
 - name: Install powerline fonts
   command: '{{ powerline_dir }}/powerline/install.sh'
-  when: powerline.stat.exists == False and clone_powerline is defined and clone_powerline|succeeded
+  when: powerline.stat.exists == False and clone_powerline is defined and clone_powerline is succeeded
 - name: Stat spaceship theme
   stat:
     path: '{{ home_dir }}/.oh-my-zsh/themes/spaceship-prompt'
@@ -53,7 +53,7 @@
     src='{{ home_dir }}/.oh-my-zsh/themes/spaceship-prompt/spaceship.zsh-theme'
     dest='{{ home_dir }}/.oh-my-zsh/themes/spaceship.zsh-theme'
     state=link
-  when: clone_spaceship is defined and clone_spaceship|succeeded
+  when: clone_spaceship is defined and clone_spaceship is succeeded
 - name: Add ansible section to theme
   lineinfile:
     path: '{{ home_dir }}/.oh-my-zsh/themes/spaceship-prompt/spaceship.zsh'
