add gimp to brew casks

--- a/ansible/vars/MacOSX.yml
+++ b/ansible/vars/MacOSX.yml
@@ -3,6 +3,7 @@ extra_utils:
 utils: "{{ common }} + {{ extra_utils }}"
 brew_casks:
   - flux
+  - gimp
   - intellij-idea-ce
   - sublime-text
 font_dir: "{{ ansible_env.HOME }}/Library/Fonts"
