--- a/ansible/vars/MacOSX.yml
+++ b/ansible/vars/MacOSX.yml
@@ -4,6 +4,6 @@ utils: "{{ common }} + {{ extra_utils }}"
 brew_casks:
   - flux
   - gimp
-  - intellij-idea-ce
+  - intellij-idea
   - sublime-text
 font_dir: "{{ ansible_env.HOME }}/Library/Fonts"
