--- a/ansible/tasks/setup-zsh.yml
+++ b/ansible/tasks/setup-zsh.yml
@@ -38,26 +38,35 @@
 - name: Install powerline fonts
   command: '{{ powerline_dir }}/powerline/install.sh'
   when: powerline.stat.exists == False and clone_powerline is defined and clone_powerline is succeeded
+- set_fact:
+    spaceship_dir: '{{ home_dir }}/.oh-my-zsh/custom/themes/spaceship-prompt'
 - name: Stat spaceship theme
   stat:
-    path: '{{ home_dir }}/.oh-my-zsh/themes/spaceship-prompt'
+    path: '{{ spaceship_dir }}'
   register: spaceship
 - name: Clone spaceship theme
   git:
     repo=https://github.com/denysdovhan/spaceship-prompt
-    dest='{{ home_dir }}/.oh-my-zsh/themes/spaceship-prompt/'
+    dest='{{ spaceship_dir }}'
   register: clone_spaceship
   when: spaceship.stat.exists == False
 - name: Symlink spaceship theme
   file:
-    src='{{ home_dir }}/.oh-my-zsh/themes/spaceship-prompt/spaceship.zsh-theme'
-    dest='{{ home_dir }}/.oh-my-zsh/themes/spaceship.zsh-theme'
+    src='{{ spaceship_dir }}/spaceship.zsh-theme'
+    dest='{{ home_dir }}/.oh-my-zsh/custom/themes/spaceship.zsh-theme'
     state=link
   when: clone_spaceship is defined and clone_spaceship is succeeded
+- name: Ensure theme contains ansible section
+  lineinfile:
+    path: '{{ spaceship_dir }}/spaceship.zsh'
+    line: '    ansible       # Ansible section'
+    state: present
+  check_mode: yes
+  register: has_ansible
 - name: Add ansible section to theme
   lineinfile:
-    path: '{{ home_dir }}/.oh-my-zsh/themes/spaceship-prompt/spaceship.zsh'
+    path: '{{ spaceship_dir }}/spaceship.zsh'
     regexp: '^\sdocker'
     insertafter: '^.*docker'
     line: '    ansible       # Ansible section'
-  when: spaceship.stat.exists == False
+  when: has_ansible.changed == True
